<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.home.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_upper_card"
                    android:paddingBottom="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_main_hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/hello"
                        android:textColor="@color/white"
                        android:textSize="12pt"
                        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />

                    <TextView
                        android:id="@+id/tv_home_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="@color/white"
                        android:textSize="12pt"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_main_hello"
                        app:layout_constraintStart_toEndOf="@+id/tv_main_hello"
                        app:layout_constraintTop_toTopOf="@+id/tv_main_hello"
                        tools:text="Elang" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floatingActionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:backgroundTint="@color/dark_purple"
                        android:contentDescription="@string/settings_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_settings_24_white"
                        app:tint="@android:color/white" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:scaleType="center"
                        android:scaleX="1"
                        android:src="@drawable/transform"
                        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tv_main_hello"
                        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

                    <Button
                        android:id="@+id/btn_build_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/light_blue"
                        android:fontFamily="@font/inter_regular"
                        android:text="Build Team Now!"
                        android:textColor="@color/white"
                        android:textSize="7pt"
                        app:layout_constraintStart_toStartOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
                        app:layout_constraintStart_toStartOf="@+id/btn_build_team"
                        app:layout_constraintTop_toBottomOf="@+id/btn_build_team">

                        <EditText
                            android:id="@+id/edt_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/search_box"
                            android:fontFamily="@font/inter_regular"
                            android:hint="@string/search"
                            android:padding="8dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:backgroundTint="@color/transpartant"
                            android:src="@drawable/baseline_search_24" />

                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/top_post_for_today"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collapsingToolbarLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_post"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_post" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
        
</FrameLayout>